Fix: copy README.md and use --no-root in Dockerfile

--- a/experiments/nca_intelligence_metrics/.devcontainer/Dockerfile
+++ b/experiments/nca_intelligence_metrics/.devcontainer/Dockerfile
@@ -30,13 +30,13 @@ RUN useradd -m -s /bin/bash appuser
 WORKDIR /app
 
 # Copy project files (context is parent directory)
-COPY pyproject.toml poetry.lock* ./
+COPY pyproject.toml poetry.lock* README.md ./
 COPY src/ ./src/
 COPY scripts/ ./scripts/
 COPY tests/ ./tests/
 
 # Install dependencies (as root, then fix permissions)
-RUN poetry install --no-interaction && \
+RUN poetry install --no-root --no-interaction && \
     chown -R appuser:appuser /app
 
 # Switch to non-root user
