--- a/experiments/nca_intelligence_metrics/pyproject.toml
+++ b/experiments/nca_intelligence_metrics/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Empirical validation of Resource-Bounded Intelligence framework using Neural Cellular Automata"
 authors = ["carasiov"]
 readme = "README.md"
-packages = [{include = "src"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
