Create results dir in postCreateCommand instead of build

--- a/experiments/nca_intelligence_metrics/.devcontainer/devcontainer.json
+++ b/experiments/nca_intelligence_metrics/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
       }
     }
   },
-  "postCreateCommand": "poetry install --no-root",
+  "postCreateCommand": "poetry install --no-root && mkdir -p results",
   "workspaceFolder": "/workspace",
   "remoteUser": "devuser"
 }
