Run container as root to avoid permission issues

--- a/experiments/nca_intelligence_metrics/.devcontainer/devcontainer.json
+++ b/experiments/nca_intelligence_metrics/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
       }
     }
   },
-  "postCreateCommand": "poetry install --no-root && mkdir -p results",
+  "postCreateCommand": "poetry install --no-root",
   "workspaceFolder": "/workspace",
-  "remoteUser": "devuser"
+  "containerUser": "root"
 }
