--- a/experiments/nca_intelligence_metrics/pyproject.toml
+++ b/experiments/nca_intelligence_metrics/pyproject.toml
@@ -8,9 +8,9 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-jax = {version = "^0.4.20", extras = ["cuda12"]}
-flax = "^0.8.0"
-optax = "^0.1.7"
+jax = {version = ">=0.4.30,<0.5.0", extras = ["cuda12"]}
+flax = ">=0.8.4"
+optax = ">=0.2.0"
 numpy = "^1.24.0"
 matplotlib = "^3.7.0"
 tqdm = "^4.65.0"
