--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,27 +4,20 @@
     "context": "..",
     "dockerfile": "Dockerfile"
   },
-  "runArgs": [
-    "--gpus", "all"
-  ],
+  "runArgs": ["--gpus", "all"],
+  "postCreateCommand": "cd /workspace/experiments/nca_intelligence_metrics && rm -rf .venv && poetry install --no-root",
+  "workspaceFolder": "/workspace",
   "customizations": {
     "vscode": {
       "extensions": [
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "ms-toolsai.jupyter",
         "charliermarsh.ruff"
       ],
       "settings": {
         "python.defaultInterpreterPath": "/workspace/experiments/nca_intelligence_metrics/.venv/bin/python",
-        "python.terminal.activateEnvironment": true,
-        "editor.formatOnSave": true,
-        "editor.rulers": [88],
         "terminal.integrated.cwd": "/workspace/experiments/nca_intelligence_metrics"
       }
     }
-  },
-  "postCreateCommand": "cd /workspace/experiments/nca_intelligence_metrics && poetry lock --no-update && poetry install --no-root && echo '✅ Ready! Run: poetry run python scripts/run_phase1.py'",
-  "workspaceFolder": "/workspace",
-  "containerUser": "root"
+  }
 }
